// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<AccordionItem
  isOpen={false}
  onTitleClick={[Function]}
  theme={
    Object {
      "containerOpen": "src-shared-components-tc-communities-Accordion-AccordionItem-style___containerOpen___34uIon",
      "content": "src-shared-components-tc-communities-Accordion-AccordionItem-style___content___VbGf4Q",
      "desktop": "src-shared-components-tc-communities-Accordion-AccordionItem-style___desktop___2paaYK",
      "mobile": "src-shared-components-tc-communities-Accordion-AccordionItem-style___mobile___2yY-nL",
      "title": "src-shared-components-tc-communities-Accordion-AccordionItem-style___title___2Ftvry",
      "titleArrow": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleArrow___1jgRQd",
      "titleText": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleText___hDDmtE",
    }
  }
  title="Test title"
>
  <div>
    Test content
  </div>
</AccordionItem>
`;

exports[`Snapshot match 2`] = `
<AccordionItem
  isOpen={true}
  onTitleClick={[Function]}
  theme={
    Object {
      "containerOpen": "src-shared-components-tc-communities-Accordion-AccordionItem-style___containerOpen___34uIon",
      "content": "src-shared-components-tc-communities-Accordion-AccordionItem-style___content___VbGf4Q",
      "desktop": "src-shared-components-tc-communities-Accordion-AccordionItem-style___desktop___2paaYK",
      "mobile": "src-shared-components-tc-communities-Accordion-AccordionItem-style___mobile___2yY-nL",
      "title": "src-shared-components-tc-communities-Accordion-AccordionItem-style___title___2Ftvry",
      "titleArrow": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleArrow___1jgRQd",
      "titleText": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleText___hDDmtE",
    }
  }
  title="Test title"
>
  <div>
    Test content
  </div>
</AccordionItem>
`;
